--- a/index.html
+++ b/index.html
@@ -3,17 +3,17 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Qasim Sarwari | Software Engineer</title>
+    <title>Nelab Qaderi | Software Engineer</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta
-        content="Qasim Sarwari | Mobile App Developer | Web Developer | Software Engineer | Freelancer | Flutter Developer | Designer"
+        content="Nelab Qaderi | Web Developer | Software Engineer | Freelancer | Flutter Developer | Designer"
         name="keywords">
-    <meta content="Hello there, I'm Qasim Sarwari. a Self-taught Developer and Designer." name="description">
+    <meta content="Hello there, I'm Nelab Qaderi. a Self-taught Developer and Designer." name="description">
     <meta name="theme-color" content="#6244C5">
     <meta name="distribution" content="global" />
     <meta name="rating" content="General" />
     <meta name="language" content="en" />
-    <meta name="author" content="Qasim Sarwari" />
+    <meta name="author" content="Nelab Qaderi" />
     <meta name="Googlebot" content="index, follow" />
     <meta name="distribution" content="global" />
     <meta name="object" content="document" />
@@ -22,10 +22,10 @@
     <link rel="canonical" href="https://qa-sim.netlify.app/" />
     <link rel="alternate" href="https://qa-sim.netlify.app" hreflang="en-us" />
     <meta name="robots" content="index" />
-    <meta content="Qasim Sarwari" property="og:title" />
-    <meta content="Qasim Sarwari (قاسم سروری) is know Mobile & Web development" property="og:description" />
+    <meta content="Nelab Qaderi" property="og:title" />
+    <meta content="Nelab Qaderi Web development" property="og:description" />
     <meta property="og:url" content="https://qa-sim.netlify.app" />
-    <meta property="og:site_name" content="Qasim Sarwari" />
+    <meta property="og:site_name" content="ٔNelab Qaderi" />
     <meta property="og:type" content="website" />
     <script src="https://www.google.com/recaptcha/api.js" async defer></script>
 
@@ -181,7 +181,7 @@
                             <h1 class="display-1 mb-0">4</h1>
                             <h5 class="mb-0">Years</h5>
                         </div>
-                        <h3 class="lh-base mb-0">of working experience as a designer & developer in Web and Mobile</h3>
+                        <h3 class="lh-base mb-0">of working experience as a designer & developer in Web </h3>
                     </div>
                     <p class="mb-4">As an accomplished software engineer, I bring a blend of technical expertise and
                         creative ingenuity to every project. With a keen eye for detail and a passion for
@@ -374,22 +374,22 @@
                     <div class="tab-content">
                         <div id="tab-1" class="tab-pane fade show p-0 active">
                             <div class="row gy-5 gx-4">
-                                <div class="col-sm-6">
+                                <!-- <div class="col-sm-6">
                                     <h5>Moble App Developer</h5>
                                     <hr class="text-primary my-2">
                                     <p class="text-primary mb-1">2022 - 2024</p>
                                     <h6 class="mb-0">Self Employed</h6>
-                                </div>
+                                </div> -->
                                 <div class="col-sm-6">
                                     <h5>Web Designer</h5>
                                     <hr class="text-primary my-2">
-                                    <p class="text-primary mb-1">2020 - 2023</p>
+                                    <p class="text-primary mb-1">2022 - 2023</p>
                                     <h6 class="mb-0">Self Employed</h6>
                                 </div>
                                 <div class="col-sm-6">
                                     <h5>Web Developer</h5>
                                     <hr class="text-primary my-2">
-                                    <p class="text-primary mb-1">2021 - 2024</p>
+                                    <p class="text-primary mb-1">2023 - 2024</p>
                                     <h6 class="mb-0">Self Employed</h6>
                                 </div>
                             </div>
@@ -399,27 +399,27 @@
                                 <div class="col-sm-6">
                                     <h5>High School</h5>
                                     <hr class="text-primary my-2">
-                                    <p class="text-primary mb-1">2006 - 2016</p>
-                                    <h6 class="mb-0">Qadeem High School</h6>
+                                    <p class="text-primary mb-1">2003 - 2015</p>
+                                    <h6 class="mb-0">Be Be Mahro High School</h6>
                                 </div>
                                 <div class="col-sm-6">
-                                    <h5>Computer Science Department</h5>
+                                    <h5>English Department</h5>
                                     <hr class="text-primary my-2">
-                                    <p class="text-primary mb-1">2020 - 2024</p>
-                                    <h6 class="mb-0">Jawzjan University</h6>
+                                    <p class="text-primary mb-1">2016 - 2020</p>
+                                    <h6 class="mb-0">Edrak University</h6>
                                 </div>
                                 <div class="col-sm-6">
                                     <h5>Graphic Design</h5>
                                     <hr class="text-primary my-2">
                                     <p class="text-primary mb-1">2024 - 2024</p>
-                                    <h6 class="mb-0">(Acted) - Youth Business and Development Hub - Sheberghan</h6>
+                                    <h6 class="mb-0">(Acted) - Ropani Foundation UN'WFP Kabul Afghanistan</h6>
                                 </div>
-                                <div class="col-sm-6">
+                                <!-- <div class="col-sm-6">
                                     <h5>English Course</h5>
                                     <hr class="text-primary my-2">
                                     <p class="text-primary mb-1">2020 - 2020</p>
                                     <h6 class="mb-0">Afghan Lemar High Education Center</h6>
-                                </div>
+                                </div> -->
                             </div>
                         </div>
                     </div>
@@ -516,14 +516,14 @@
                     <div class="col-lg-6 text-lg-end">
                         <ul class="list-inline mx-n3 mb-0" id="portfolio-flters">
                             <li class="mx-3 active" data-filter="*">All Projects</li>
-                            <li class="mx-3" data-filter=".app">Mobile App</li>
+                            <!-- <li class="mx-3" data-filter=".app">Mobile App</li> -->
                             <li class="mx-3" data-filter=".database">Database</li>
                             <li class="mx-3" data-filter=".web">Web Design</li>
                         </ul>
                     </div>
                 </div>
                 <div class="row g-4 portfolio-container">
-                    <div class="col-lg-3 col-md-6 portfolio-item app">
+                    <!-- <div class="col-lg-3 col-md-6 portfolio-item app">
                         <div class="portfolio-img rounded overflow-hidden">
                             <img class="img-fluid" src="img/portfolio/portfolio-1.jpg" alt="Qasim">
                             <div class="portfolio-btn">
@@ -535,7 +535,7 @@
                                         class="rounded" src="img/play-store.png" width="150"></a>
                             </div>
                         </div>
-                    </div>
+                    </div> -->
                     <div class="col-lg-3 col-md-6 portfolio-item database">
                         <div class="portfolio-img rounded overflow-hidden">
                             <img class="img-fluid" src="img/portfolio/database-1.png" alt="Qasim">
@@ -546,7 +546,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-3 col-md-6 portfolio-item app">
+                    <!-- <div class="col-lg-3 col-md-6 portfolio-item app">
                         <div class="portfolio-img rounded overflow-hidden">
                             <img class="img-fluid" src="img/portfolio/portfolio-3.jpg" alt="Qasim">
                             <div class="portfolio-btn">
@@ -558,8 +558,8 @@
                                         class="rounded" src="img/play-store.png" width="150"></a>
                             </div>
                         </div>
-                    </div>
-                    <div class="col-lg-3 col-md-6 portfolio-item app">
+                    </div> -->
+                    <!-- <div class="col-lg-3 col-md-6 portfolio-item app">
                         <div class="portfolio-img rounded overflow-hidden">
                             <img class="img-fluid" src="img/portfolio/portfolio-4.jpg" alt="Qasim">
                             <div class="portfolio-btn">
@@ -571,8 +571,8 @@
                                         class="rounded" src="img/play-store.png" width="150"></a>
                             </div>
                         </div>
-                    </div>
-                    <div class="col-lg-3 col-md-6 portfolio-item app">
+                    </div> -->
+                    <!-- <div class="col-lg-3 col-md-6 portfolio-item app">
                         <div class="portfolio-img rounded overflow-hidden">
                             <img class="img-fluid" src="img/portfolio/portfolio-5.jpg" alt="Qasim">
                             <div class="portfolio-btn">
@@ -584,7 +584,7 @@
                                         class="rounded" src="img/play-store.png" width="150"></a>
                             </div>
                         </div>
-                    </div>
+                    </div> -->
                     <div class="col-lg-3 col-md-6 portfolio-item app">
                         <div class="portfolio-img rounded overflow-hidden">
                             <img class="img-fluid" src="img/portfolio/portfolio-6.jpg" alt="Qasim">
@@ -959,7 +959,7 @@
                 </div>
                 <div class="col-lg-7 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
                     <p class="mb-4">Let's talk about your project by sending a message to me.</p>
-                    <form action="https://formspree.io/f/mwkajyrw" method="POST">
+                    <form action="#" method="POST">
                         <div class="row g-3">
                             <div class="col-md-12">
                                 <div class="form-floating">
@@ -980,7 +980,7 @@
                                     <label for="message">Message</label>
                                 </div>
                             </div>
-                            <div class="g-recaptcha" data-sitekey="6Lf8VvUcAAAAAGm9fMu0JxZ2zRdM-WLy11YRQkpr"></div>
+                           
                             <div class="col-12">
                                 <button class="btn btn-primary py-3 px-5" type="submit">Send Message</button>
                             </div>
@@ -994,13 +994,13 @@
 
 
     <!-- Map Start -->
-     <div class="container-xxl pt-5 px-0 wow fadeInUp" data-wow-delay="0.1s">
+     <!-- <div class="container-xxl pt-5 px-0 wow fadeInUp" data-wow-delay="0.1s">
         <div class="container-xxl pt-5 px-0">
             <div class="bg-dark">
                 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d93698.18758064699!2d67.23015236925221!3d36.70334015972171!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3f34b8a72083e727%3A0xbbd7d46dee1b5a8f!2z2LHZiNi22Ycg2LTYsduM2YE!5e1!3m2!1sfa!2s!4v1717346239430!5m2!1sfa!2s" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
         </div>
-    </div>
+    </div> -->
     <!-- Map End -->
 
 
